rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest
  labels:
    app: rest
spec:
  # comment or delete the following line if you want to use a LoadBalancer 
  # type: NodePort
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: rest
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: rest
